--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
 
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header class="header">
@@ -66,7 +66,7 @@
                     <li class="features_list-item">
                         <div class="features-icon_block">
                             <svg class="features-icon" width="64" height="64">
-                                <use href="/images/icons.svg#icon-antenna"></use>
+                                <use href="./images/icons.svg#icon-antenna"></use>
                               </svg>
                         </div>
                         <h3 class="features-title">Strategy</h3>
@@ -77,7 +77,7 @@
                     <li class="features_list-item">
                         <div class="features-icon_block">
                             <svg class="features-icon" width="64" height="64">
-                                <use href="/images/icons.svg#icon-clock"></use>
+                                <use href="./images/icons.svg#icon-clock"></use>
                               </svg>
                         </div>
                         <h3 class="features-title">Punctuality</h3>
@@ -88,7 +88,7 @@
                     <li class="features_list-item">
                         <div class="features-icon_block">
                             <svg class="features-icon" width="64" height="64">
-                                <use href="/images/icons.svg#icon-diagram"></use>
+                                <use href="./images/icons.svg#icon-diagram"></use>
                               </svg>
                         </div>
                         <h3 class="features-title">Diligence</h3>
@@ -99,7 +99,7 @@
                     <li class="features_list-item">
                         <div class="features-icon_block">
                             <svg class="features-icon" width="64" height="64">
-                                <use href="/images/icons.svg#icon-astronaut"></use>
+                                <use href="./images/icons.svg#icon-astronaut"></use>
                               </svg>
                         </div>
                         <h3 class="features-title">Technologies</h3>
@@ -126,28 +126,28 @@
                                 <li class="team_card-icon_list-item">
                                     <a href="#" class="team_card-icon_list-item-link">
                                         <svg class="team_card-icon" width="16" height="16">
-                                            <use href="/images/icons.svg#icon-instagram"></use>
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_card-icon_list-item">
                                     <a href="#" class="team_card-icon_list-item-link">
                                         <svg class="team_card-icon" width="16" height="16">
-                                            <use href="/images/icons.svg#icon-twitter"></use>
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_card-icon_list-item">
                                      <a href="#" class="team_card-icon_list-item-link">
                                         <svg class="team_card-icon" width="16" height="16">
-                                            <use href="/images/icons.svg#icon-facebook"></use>
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_card-icon_list-item">
                                      <a href="#" class="team_card-icon_list-item-link">
                                         <svg class="team_card-icon" width="16" height="16">
-                                            <use href="/images/icons.svg#icon-linkedin"></use>
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -164,28 +164,28 @@
                                 <li class="team_card-icon_list-item">
                                      <a href="#" class="team_card-icon_list-item-link">
                                         <svg class="team_card-icon" width="16" height="16">
-                                            <use href="/images/icons.svg#icon-instagram"></use>
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_card-icon_list-item">
                                      <a href="#" class="team_card-icon_list-item-link">
                                         <svg class="team_card-icon" width="16" height="16">
-                                            <use href="/images/icons.svg#icon-twitter"></use>
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_card-icon_list-item">
                                      <a href="#" class="team_card-icon_list-item-link">
                                         <svg class="team_card-icon" width="16" height="16">
-                                            <use href="/images/icons.svg#icon-facebook"></use>
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_card-icon_list-item">
                                      <a href="#" class="team_card-icon_list-item-link">
                                         <svg class="team_card-icon" width="16" height="16">
-                                            <use href="/images/icons.svg#icon-linkedin"></use>
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -202,28 +202,28 @@
                                 <li class="team_card-icon_list-item">
                                      <a href="#" class="team_card-icon_list-item-link">
                                         <svg class="team_card-icon" width="16" height="16">
-                                            <use href="/images/icons.svg#icon-instagram"></use>
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_card-icon_list-item">
                                      <a href="#" class="team_card-icon_list-item-link">
                                         <svg class="team_card-icon" width="16" height="16">
-                                            <use href="/images/icons.svg#icon-twitter"></use>
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_card-icon_list-item">
                                      <a href="#" class="team_card-icon_list-item-link">
                                         <svg class="team_card-icon" width="16" height="16">
-                                            <use href="/images/icons.svg#icon-facebook"></use>
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_card-icon_list-item">
                                      <a href="#" class="team_card-icon_list-item-link">
                                         <svg class="team_card-icon" width="16" height="16">
-                                            <use href="/images/icons.svg#icon-linkedin"></use>
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -240,28 +240,28 @@
                                 <li class="team_card-icon_list-item">
                                     <a href="#" class="team_card-icon_list-item-link">
                                         <svg class="team_card-icon" width="16" height="16">
-                                            <use href="/images/icons.svg#icon-instagram"></use>
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_card-icon_list-item">
                                     <a href="#" class="team_card-icon_list-item-link">
                                         <svg class="team_card-icon" width="16" height="16">
-                                            <use href="/images/icons.svg#icon-twitter"></use>
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_card-icon_list-item">
                                     <a href="#" class="team_card-icon_list-item-link">
                                         <svg class="team_card-icon">
-                                            <use href="/images/icons.svg#icon-facebook"></use>
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_card-icon_list-item">
                                     <a href="#" class="team_card-icon_list-item-link">
                                         <svg class="team_card-icon" width="16" height="16">
-                                            <use href="/images/icons.svg#icon-linkedin"></use>
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -374,27 +374,35 @@
             </div>
 
             <div class="social_media">
-                <h3 class="social_media-title">Social media</h3>
+                <p class="social_media-title">Social media</p>
                 <ul class="social_media-icon_list">
                     <li class="social_media-icon_list-item">
-                        <svg class="social_media-icon">
-                            <use href="/images/icons.svg#icon-instagram"></use>
-                        </svg>
+                        <a href="#" class="social_media-icon_list-item-link">
+                            <svg class="social_media-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
                     </li>
                     <li class="social_media-icon_list-item">
-                        <svg class="social_media-icon">
-                            <use href="/images/icons.svg#icon-twitter"></use>
-                        </svg>
+                        <a href="#" class="social_media-icon_list-item-link">
+                            <svg class="social_media-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
                     </li>
                     <li class="social_media-icon_list-item">
-                        <svg class="social_media-icon">
-                            <use href="/images/icons.svg#icon-facebook"></use>
-                        </svg>
+                        <a href="#" class="social_media-icon_list-item-link">
+                            <svg class="social_media-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
                     </li>
                     <li class="social_media-icon_list-item">
-                        <svg class="social_media-icon">
-                            <use href="/images/icons.svg#icon-linkedin"></use>
-                        </svg>
+                        <a href="#" class="social_media-icon_list-item-link">
+                            <svg class="social_media-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
             </div>
