--- a/index.html
+++ b/index.html
@@ -364,8 +364,8 @@
 
     <footer class="footer">
         <div class="container">
-            <div class="footer-logo">
-                <a class="logo" href="/">
+            <div class="footer-logo-block">
+                <a class="logo footer-logo" href="/">
                     Web<span class="logo-white">Studio</span> 
                 </a>
                 <p class="footer-message">
